Fix navbar alignment issues and add styles

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,34 +1,45 @@
-.nav{
+.nav {
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    align-items: center;
-    margin: 40px 120px;
-    color: black;
-
+    padding: 0px 20px;
+    background-color: #f8f9fa; 
 }
-
-.nav-logo{
-    font-family: Outfit;
-    font-size: 42px;
-    font-weight: 500;
-    border-radius: 5px;
-    padding: 10px 38px;
-    background: #000000;
-    color: #ffffff;
-}
-
-.nav-menu{
-    display:flex;
-    align-items: center;
+.nav-right{
+    display: flex; 
     list-style: none;
-    font-size: 20px;
-    gap: 70px;
-}
+    margin: 0;
+    padding: 0;
 
-.nav-dis{
+}
+  
+.nav-logo {
+    height: 80px;
+}
+  
+.nav-dis {
+    align-items: center;
     border-radius: 50px;
     padding: 10px 38px;
-    background: #000000;
+    background: #b9624e;
     color: #ffffff;
-
+    list-style: none;
+    font-size: 20px;
+    margin: 0 20px;
 }
+  
+.nav button{
+    background: transparent;
+    font-size: 20px;
+    color: #000000;
+    border: 1px solid orangered;
+    padding: 10px 38px;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+  
+.nav button:hover {
+    background-color: #ebcbc5;
+}
+  
